# solid-and-fast-cpp

./: CMakeLists.txt  README.md
src/: main.cpp
src/fast/functional/: new_const_qualifiers.cpp  repeat_n.hpp  test_repeat_n.cpp
src/solid/di/: crtp.hpp  database.hpp  di_concepts.hpp  http_client.hpp  microservice.hpp  test_di.cpp  yaml.hpp
src/solid/itf_segregation/: chimera_concept.hpp
src/solid/liskov/: lsp_problem.hpp  test_lsp.cpp
src/solid/open_close/: helicopter.hpp  maneuverable.hpp  tactics.hpp  tank.hpp  test_maneuver.cpp
src/solid/single_resp/: eagle.hpp  griffin.hpp  horse.hpp  lion.hpp
tools/docker/: compose.yml
tools/docker/core/: Dockerfile
tools/docker/vcpkg/: Dockerfile
tools/shells/: build_docker_image.sh  destroy_docker_image.sh  init_variables.sh
